node: prototype of stats node ready for demo

--- a/peekingduck/configs/dabble/statistics.yml
+++ b/peekingduck/configs/dabble/statistics.yml
@@ -1,19 +1,23 @@
 input: ["all"]
-output: ["avg", "min", "max"]
+output: ["avg", "min", "max", "curr"]
 
-# how to deal with lists
-mode: conditional_count #len, conditional_count, nothing
-condition: "TOO CLOSE!" 
-attribute: {
-  primary_key: obj_tags,
-  secondary_key: groups
+attribute: ["count"]
+calc_method: int # "int", "list_len", "list_max", "list_conditional"
+condition: {
+  operator: null,
+  operand: null
 }
+
 
 # "per_frame": "avg", "min", "max"
 # "tracking": "sum"
 
 # count = 8
 # large_groups = [5, 4]                           -> len() = 2
+# zone_count = [0, 1]                             -> ?
 # obj_tags["groups"] = [5, 5, 5, 4, 4, 4, 4, 4]   -> len() = 8
 # obj_tags["flags"] = ["CLOSE!", "", "CLOSE!"]    -> obj_tags["flags"].count("CLOSE!") = 2
 # obj_tags["ids"] = [0, 2, 4, 5, 6]               -> max() = 6
+
+# list: number of items in list, max integer in list, number of items in list given a condition, 
+# int: count
