docs: shorten module names in sidebar\
add peekingduck.pipeline.nodes to sys.path
generate nodes docs in docs/source/nodes
add docs/source/nodes to "make clean" targer and gitignore
omit module name in class signature for clarity

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -18,6 +18,7 @@ BUILDDIR      = build
 clean:
 	@echo "clean $(SOURCEDIR)..."
 	@rm -rf $(SOURCEDIR)/peekingduck*.rst
+	@rm -rf $(SOURCEDIR)/nodes
 	@echo "clean $(BUILDDIR)..."
 	@rm -rf $(BUILDDIR)/doctrees
 	@rm -rf $(BUILDDIR)/html
