--- a/peekingduck/configs/node_template.yml
+++ b/peekingduck/configs/node_template.yml
@@ -1,12 +1,12 @@
 # Mandatory configs
+# Receive bounding boxes and their respective labels as input. Replace with
+# other data types as required. List of built-in data types for PeekingDuck can
+# be found at https://peekingduck.readthedocs.io/en/stable/glossary.html.
+input: ["bboxes", "bbox_labels"]
 # Example:
-# Use 'input: ["bboxes", "bbox_labels"]' to receive bounding boxes and their
-# respective labels as input
-input: ["in1", "in2"]
-# Example:
-# Use 'output: ["obj_tags", "custom_key"]' to output `obj_tags` visualization
-# with `draw.tag` node and `custom_key` for use with other custom nodes.
-output: ["out1", "out2", "out3"]
+# Output `obj_tags` for visualization with `draw.tag` node and `custom_key` for
+# use with other custom nodes. Replace as required.
+output: ["obj_tags", "custom_key"]
 
 # Optional configs depending on node
 threshold: 0.5 # example
