--- a/tests/pipeline/nodes/model/fairmotv1/test_fairmot.yml
+++ b/tests/pipeline/nodes/model/fairmotv1/test_fairmot.yml
@@ -8,7 +8,7 @@ weights:
   {
     model_subdir: fairmot,
     blob_file: fairmot.zip,
-    model_file: { dla_34: fairmot_dla34.pth },
+    model_file: { dla_34: fairmot_dla34-stripped-half.pth },
   }
 
 model_type: dla_34
