build: include master mapping yml to package

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,11 @@ include_package_data = True
 # [options.extras_require]
 
 [options.package_data]
-* = configs/*/*.yml, configs/node_template.yml, optional_requirements.txt
+* =
+    configs/*/*.yml
+    configs/node_template.yml
+    pipeline/nodes/model/master_map.yml
+    optional_requirements.txt
 
 [options.packages.find]
 include = peekingduck, peekingduck.*
