--- a/peekingduck/configs/draw/legend.yml
+++ b/peekingduck/configs/draw/legend.yml
@@ -1,6 +1,5 @@
 input: ["all"]
 output: ["img"]
 
-all_legend_items: ["fps", "count", "zone_count", "avg", "min", "max"]
 position: "bottom"
-include: ["*"]
+show: []
