node: added tables to dabble.statistics docstrings

--- a/peekingduck/configs/dabble/statistics.yml
+++ b/peekingduck/configs/dabble/statistics.yml
@@ -3,7 +3,7 @@ output: ["avg", "min", "max"]
 
 target: {
   data_type: count,
-  dict_keys: null,
+  get: null,
 } 
 apply: {
   function: identity,
