--- a/pipeline_config.yml
+++ b/pipeline_config.yml
@@ -1,5 +1,5 @@
 nodes:
-- input.live
-- model.yolo
-- draw.bbox
-- output.screen
+  - input.live
+  - model.posenet
+  - draw.poses
+  - output.screen
