--- a/tests/use_cases/systest_face_mask_detection.yml
+++ b/tests/use_cases/systest_face_mask_detection.yml
@@ -1,8 +1,9 @@
 nodes:
 - input.recorded:
-    input_dir: "images/testing" 
+    input_dir: "tests/data/images"
 - model.yolo_face
 - dabble.fps
 - draw.bbox:
     show_labels: True
-- draw.legend
+- draw.legend:
+    show: ["fps"]
