--- a/tests/use_cases/systest_privacy_protection_faces.yml
+++ b/tests/use_cases/systest_privacy_protection_faces.yml
@@ -1,6 +1,6 @@
 nodes:
 - input.recorded:
-    input_dir: "images/testing"
+    input_dir: "tests/data/images"
 - model.mtcnn
 - dabble.fps
 - draw.mosaic_bbox
