--- a/tests/use_cases/systest_zone_counting.yml
+++ b/tests/use_cases/systest_zone_counting.yml
@@ -1,6 +1,6 @@
 nodes:
 - input.recorded:
-    input_dir: "images/testing" 
+    input_dir: "tests/data/images"
 - model.yolo:
     detect_ids: [0]
 - dabble.bbox_to_btm_midpoint
