--- a/tests/use_cases/systest_people_counting_over_time.yml
+++ b/tests/use_cases/systest_people_counting_over_time.yml
@@ -1,10 +1,7 @@
 nodes:
 - input.recorded:
     input_dir: tests/data/videos/humans_mot.mp4
-- model.efficientdet:
-    detect_ids: ["car"]
-- dabble.tracking:
-    tracking_type: iou
+- model.jde
 - dabble.statistics:
     maximum: obj_attrs["ids"]
 - draw.bbox
