--- a/use_cases/object_counting_present.yml
+++ b/use_cases/object_counting_present.yml
@@ -1,10 +1,11 @@
 nodes:
 - input.live
 - model.yolo:
-    detect_ids: [0]
+    detect_ids: ["person"]
 - dabble.bbox_count
-- dabble.fps
+- dabble.statistics:
+    identity: count
 - draw.bbox
 - draw.legend:
-    show: ["count", "fps"]
+    show: ["count", "cum_avg", "cum_max", "cum_min"]
 - output.screen
