--- a/tests/use_cases/systest_crowd_counting.yml
+++ b/tests/use_cases/systest_crowd_counting.yml
@@ -3,8 +3,7 @@ nodes:
     input_dir: "tests/data/images"
 - model.csrnet:
     model_type: dense
-- dabble.fps
 - draw.heat_map
 - draw.legend:
-    show: ["count", "fps"]
+    show: ["count"]
 - output.screen
