--- a/use_cases/people_counting_over_time.yml
+++ b/use_cases/people_counting_over_time.yml
@@ -1,10 +1,7 @@
 nodes:
 - input.recorded:
-    input_dir: tests/data/videos/humans_mot.mp4
-- model.efficientdet:
-    detect_ids: ["car"]
-- dabble.tracking:
-    tracking_type: iou
+    input_dir: <path/to/video with people>
+- model.jde
 - dabble.statistics:
     maximum: obj_attrs["ids"]
 - draw.bbox
@@ -12,3 +9,4 @@ nodes:
     show: ["ids"]
 - draw.legend:
     show: ["cum_max"]
+- output.screen
