fix: fixed file paths in use case configs

--- a/tests/use_cases/systest_zone_counting.yml
+++ b/tests/use_cases/systest_zone_counting.yml
@@ -1,6 +1,6 @@
 nodes:
 - input.recorded:
-    input_dir: "tests/data/images"
+    input_dir: tests/data/images
 - model.yolo:
     detect_ids: ["person"]
 - dabble.bbox_to_btm_midpoint
