--- a/tests/use_cases/systest_crowd_counting.yml
+++ b/tests/use_cases/systest_crowd_counting.yml
@@ -1,6 +1,6 @@
 nodes:
 - input.recorded:
-    input_dir: "tests/data/images"
+    input_dir: tests/data/images
 - model.csrnet:
     model_type: dense
 - draw.heat_map
