--- a/tests/use_cases/systest_face_mask_detection.yml
+++ b/tests/use_cases/systest_face_mask_detection.yml
@@ -1,6 +1,6 @@
 nodes:
 - input.recorded:
-    input_dir: "tests/data/images"
+    input_dir: tests/data/images
 - model.yolo_face
 - draw.bbox:
     show_labels: True
