--- a/tests/use_cases/systest_social_distancing.yml
+++ b/tests/use_cases/systest_social_distancing.yml
@@ -1,6 +1,6 @@
 nodes:
 - input.recorded:
-    input_dir: "tests/data/images"
+    input_dir: tests/data/images
 - model.posenet
 - dabble.keypoints_to_3d_loc:
     focal_length: 1.14
