--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 click == 7.1.2
 colorama == 0.4.4
-numpy == 1.17.3
+numpy >= 1.17.3
 opencv-contrib-python >= 4.5.2.54
-pyyaml >= 5.3.1
+pyyaml >= 5.3
 requests == 2.24.0
-tensorflow == 2.2
+tensorflow >= 2.2, < 2.8
 torch == 1.10.0
 torchvision == 0.11.1
 tqdm == 4.45.0
