docs: update yaml files in use_cases, tests/use_cases, scripts/benchmarks to use input.visual

--- a/tests/use_cases/systest_people_counting_over_time.yml
+++ b/tests/use_cases/systest_people_counting_over_time.yml
@@ -1,6 +1,6 @@
 nodes:
-- input.recorded:
-    input_dir: tests/data/videos/humans_mot.mp4
+- input.visual:
+    source: tests/data/videos/humans_mot.mp4
 - model.jde
 - dabble.statistics:
     maximum: obj_attrs["ids"]
