--- a/tests/use_cases/systest_privacy_protection_license_plate.yml
+++ b/tests/use_cases/systest_privacy_protection_license_plate.yml
@@ -1,5 +1,5 @@
 nodes:
-- input.recorded:
-    input_dir: "tests/data/images"
+- input.visual:
+    source: "tests/data/images"
 - model.yolo_license_plate
 - draw.blur_bbox
