--- a/tests/use_cases/systest_object_counting_over_time.yml
+++ b/tests/use_cases/systest_object_counting_over_time.yml
@@ -1,6 +1,6 @@
 nodes:
-- input.recorded:
-    input_dir: tests/data/videos/humans_mot.mp4
+- input.visual:
+    source: tests/data/videos/humans_mot.mp4
 - model.efficientdet:
     detect_ids: ["car"]
 - dabble.tracking:
