--- a/tests/use_cases/systest_object_counting_present.yml
+++ b/tests/use_cases/systest_object_counting_present.yml
@@ -1,6 +1,6 @@
 nodes:
-- input.recorded:
-    input_dir: "images/testing" 
+- input.visual:
+    source: "images/testing" 
 - model.yolo:
     detect_ids: ["person"]
 - dabble.bbox_count
