--- a/use_cases/crowd_counting.yml
+++ b/use_cases/crowd_counting.yml
@@ -1,6 +1,6 @@
 nodes:
-- input.recorded:
-    input_dir: <path/to/video with crowd>
+- input.visual:
+    source: <path/to/video with crowd>
 - model.csrnet:
     model_type: dense
 - draw.heat_map
