--- a/use_cases/object_counting_over_time.yml
+++ b/use_cases/object_counting_over_time.yml
@@ -1,6 +1,6 @@
 nodes:
-- input.recorded:
-    input_dir: <path/to/video with cars>
+- input.visual:
+    source: <path/to/video with cars>
 - model.efficientdet:
     detect_ids: ["car"]
 - dabble.tracking:
