--- a/.github/workflows/publish_pypi.yml
+++ b/.github/workflows/publish_pypi.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Local Test
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -r cicd_requirements.txt
-          pip install lap==0.4.0
           pip install .
           bash ./scripts/run_tests.sh all
           bash ./scripts/usecase_tests.sh
