refactor: change posenet and movenet to return "person" labels

--- a/tests/pipeline/nodes/model/movenetv1/test_groundtruth.yml
+++ b/tests/pipeline/nodes/model/movenetv1/test_groundtruth.yml
@@ -36,7 +36,7 @@
             [[0.41659358, 0.15273058],[0.46814972, 0.25049454]],
             [[0.32708403, 0.1508053 ],[0.2782876 , 0.2551871 ]]
         ]]
-        "bbox_labels": ["Person"]
+        "bbox_labels": ["person"]
 "singlepose_lightning":
     "t2.jpg":
         "bboxes": [[0.22654091, 0.1328764, 0.5406127, 0.82842344]]
@@ -80,7 +80,7 @@
             [[0.35494345, 0.13334128], [0.32187343, 0.14883918]],
             [[0.41464156, 0.15027678], [0.47005054, 0.24874227]],
             [[0.32187343, 0.14883918], [0.27398938, 0.24775419]]]]
-        "bbox_labels": ["Person"]
+        "bbox_labels": ["person"]
 "multipose_lightning":
     "t2.jpg" :
         "bboxes": [[0.18117496, 0.07903931, 0.5878948 , 0.90658283]]
@@ -118,7 +118,7 @@
             [[0.40894982, 0.15050413],[0.46048707, 0.24572814]],
             [[0.32895032, 0.1479785 ],[0.27199584, 0.25465733]]
         ]]
-        "bbox_labels": ["Person"]
+        "bbox_labels": ["person"]
     "t1.jpg":
         "bboxes": [
             [0.50185835, 0.40049648, 0.896302  , 0.9937241 ],
@@ -204,7 +204,7 @@
             [[0.3243169 , 0.31352615],[0.29220432, 0.3366282 ]],
             [[0.34316528, 0.31869632],[0.38486868, 0.39642152]],
             [[0.29220432, 0.3366282 ],[0.28059328, 0.44386888]]]]
-        'bbox_labels': ['Person', 'Person']
+        "bbox_labels": ["person", "person"]
     "t4.jpg":
         "bboxes": [
             [0.19205706, 0.283239,   0.3498301,  0.80412936],
@@ -369,4 +369,4 @@
             [[0.5471323 , 0.34030798],[0.5587498 , 0.39657068]],
             [[0.507185  , 0.33930403],[0.4899062 , 0.385817  ]]]
         ]
-        'bbox_labels': ['Person', 'Person', 'Person', 'Person']
+        "bbox_labels": ["person", "person", "person", "person"]
