--- a/tests/use_cases/systest_object_counting_present.yml
+++ b/tests/use_cases/systest_object_counting_present.yml
@@ -1,6 +1,6 @@
 nodes:
 - input.visual:
-    source: "images/testing" 
+    source: "tests/data/images"
 - model.yolo:
     detect_ids: ["person"]
 - dabble.bbox_count
