--- a/peekingduck/configs/model/csrnet.yml
+++ b/peekingduck/configs/model/csrnet.yml
@@ -3,13 +3,10 @@ output: ["density_map", "count"]
 
 model_type: sparse # sparse or dense
 weights_parent_dir: null
-weights: {
+weights:
+  {
     model_subdir: csrnet,
     blob_file: csrnet.zip,
-    model_file: {
-        dense: shanghaitech-part-a,
-        sparse: shanghaitech-part-b
-    }
-}
+    model_file: { dense: shanghaitech-part-a, sparse: shanghaitech-part-b },
+  }
 width: 640
-
