--- a/peekingduck/configs/model/yolox.yml
+++ b/peekingduck/configs/model/yolox.yml
@@ -2,23 +2,26 @@ input: ["img"]
 output: ["bboxes", "bbox_labels", "bbox_scores"]
 
 weights_parent_dir: null
-weights: {
+weights:
+  {
     model_subdir: yolox,
     blob_file: yolox.zip,
     classes_file: coco.names,
-    model_file: {
+    model_file:
+      {
         yolox-tiny: yolox-tiny.pth,
         yolox-s: yolox-s.pth,
         yolox-m: yolox-m.pth,
         yolox-l: yolox-l.pth,
-    }
-}
-model_size: {
+      },
+  }
+model_size:
+  {
     yolox-tiny: { depth: 0.33, width: 0.375 },
     yolox-s: { depth: 0.33, width: 0.5 },
     yolox-m: { depth: 0.67, width: 0.75 },
     yolox-l: { depth: 1.0, width: 1.0 },
-}
+  }
 num_classes: 80
 
 model_type: yolox-tiny # yolox-tiny, yolox-s, yolox-m, or yolox-l
