--- a/peekingduck/configs/model/yolo_license_plate.yml
+++ b/peekingduck/configs/model/yolo_license_plate.yml
@@ -1,19 +1,18 @@
 input: ["img"]
 output: ["bboxes", "bbox_labels", "bbox_scores"]
 
-model_type: v4 # v4 or v4tiny
 weights_parent_dir: null
-weights: {
+weights:
+  {
     model_subdir: yolo_license_plate,
     blob_file: yolo_license_plate.zip,
     classes_file: classes.names,
-    saved_model_subdir: {
-        v4: LPyolov4,
-        v4tiny: LPyolov4tiny
-    }
-}
-size: 416
+    model_file: { v4: LPyolov4, v4tiny: LPyolov4tiny },
+  }
+input_size: 416
 max_output_size_per_class: 50
 max_total_size: 50
+
+model_type: v4 # v4 or v4tiny
 iou_threshold: 0.3
 score_threshold: 0.1
