--- a/peekingduck/configs/model/yolo_face.yml
+++ b/peekingduck/configs/model/yolo_face.yml
@@ -1,20 +1,19 @@
 input: ["img"]
 output: ["bboxes", "bbox_labels", "bbox_scores"]
 
-model_type: v4tiny # v4 or v4tiny
 weights_parent_dir: null
-weights: {
+weights:
+  {
     model_subdir: yolo_face,
     blob_file: yolo_face.zip,
     classes_file: classes.names,
-    saved_model_subdir: {
-        v4: yolov4,
-        v4tiny: yolov4tiny
-    }
-}
-size: 416
-detect_ids: [0, 1]
+    model_file: { v4: yolov4, v4tiny: yolov4tiny },
+  }
+input_size: 416
 max_output_size_per_class: 50
 max_total_size: 50
+
+model_type: v4tiny # v4 or v4tiny
+detect_ids: [0, 1]
 iou_threshold: 0.1
 score_threshold: 0.7
