--- a/peekingduck/configs/model/yolo.yml
+++ b/peekingduck/configs/model/yolo.yml
@@ -1,34 +1,21 @@
 input: ["img"]
 output: ["bboxes", "bbox_labels", "bbox_scores"]
 
-model_type: v4tiny # v4 or v4tiny
 weights_parent_dir: null
-weights: {
+weights:
+  {
     model_subdir: yolov4,
     blob_file: yolo.zip,
     classes_file: coco.names,
-    model_file: {
-        v4: yolov4.pb,
-        v4tiny: yolov4-tiny.pb
-    }
-}
-size: 416
-num_classes: 80
-detect_ids: [0]
+    model_file: { v4: yolov4.pb, v4tiny: yolov4-tiny.pb },
+  }
+input_size: 416
 max_output_size_per_class: 50
 max_total_size: 50
+num_classes: 80
+model_nodes: { inputs: [x:0], outputs: [Identity:0] }
+
+model_type: v4tiny # v4 or v4tiny
+detect_ids: [0]
 iou_threshold: 0.5
 score_threshold: 0.2
-MODEL_NODES: {
-    yolov41: {
-        inputs: [x:0],
-        outputs: [model/tf_op_layer_split_2/split_2:0,
-        model/tf_op_layer_split_1/split_1:0,
-        model/tf_op_layer_split/split:0,
-        Identity:0]
-    },
-    yolov4: {
-        inputs: [x:0],
-        outputs: [Identity:0]
-    }
-}
