--- a/peekingduck/configs/model/movenet.yml
+++ b/peekingduck/configs/model/movenet.yml
@@ -1,22 +1,27 @@
 input: ["img"]
-output: ["bboxes", "keypoints", "keypoint_scores", "keypoint_conns", "bbox_labels"]
+output:
+  ["bboxes", "keypoints", "keypoint_scores", "keypoint_conns", "bbox_labels"]
 
-model_type: multipose_lightning
 weights_parent_dir: null
-weights: {
+weights:
+  {
     model_subdir: movenet,
     blob_file: movenet.zip,
-    model_file: {
-      multipose_lightning: multipose_lightning,
-      singlepose_lightning: singlepose_lightning,
-      singlepose_thunder: singlepose_thunder,
+    model_file:
+      {
+        multipose_lightning: multipose_lightning,
+        singlepose_lightning: singlepose_lightning,
+        singlepose_thunder: singlepose_thunder,
+      },
   }
-}
-resolution: {
+# only multipose allows dynamic shape in multiples of 32 (recommended 256)
+resolution:
+  {
     singlepose_lightning: { height: 192, width: 192 },
     singlepose_thunder: { height: 256, width: 256 },
-    multipose_lightning: { height: 256, width: 256 }, 
-} # only multipose allows dynamic shape in multiples of 32 (recommended 256)
+    multipose_lightning: { height: 256, width: 256 },
+  }
 
+model_type: multipose_lightning
 bbox_score_threshold: 0.2
 keypoint_score_threshold: 0.3
