--- a/peekingduck/configs/model/hrnet.yml
+++ b/peekingduck/configs/model/hrnet.yml
@@ -3,8 +3,13 @@ output: ["keypoints", "keypoint_scores", "keypoint_conns"]
 
 weights_parent_dir: null
 weights:
-  { model_subdir: hrnet, blob_file: hrnet.zip, model_file: hrnet_frozen.pb }
+  {
+    model_subdir: hrnet,
+    blob_file: hrnet.zip,
+    model_file: { default: hrnet_frozen.pb },
+  }
+model_nodes: { inputs: [x:0], outputs: [Identity:0] }
 resolution: { height: 192, width: 256 }
-score_threshold: 0.1
-MODEL_NODES: { inputs: [x:0], outputs: [Identity:0] }
+
 model_type: default
+score_threshold: 0.1
