--- a/peekingduck/configs/model/posenet.yml
+++ b/peekingduck/configs/model/posenet.yml
@@ -6,13 +6,19 @@ weights_parent_dir: null
 weights:
   {
     model_subdir: posenet,
-    blob_file: posenet.zip,
+    blob_file:
+      {
+        50: model-mobilenet_v1_050.zip,
+        75: model-mobilenet_v1_075.zip,
+        100: model-mobilenet_v1_100.zip,
+        resnet: model-resnet.zip,
+      },
     model_file:
       {
-        50: models/model-mobilenet_v1_050.pb,
-        75: models/model-mobilenet_v1_075.pb,
-        100: models/model-mobilenet_v1_100.pb,
-        resnet: models/model-resnet.pb,
+        50: model-mobilenet_v1_050.pb,
+        75: model-mobilenet_v1_075.pb,
+        100: model-mobilenet_v1_100.pb,
+        resnet: model-resnet.pb,
       },
   }
 model_nodes:
