--- a/peekingduck/configs/model/csrnet.yml
+++ b/peekingduck/configs/model/csrnet.yml
@@ -1,12 +1,14 @@
 input: ["img"]
 output: ["density_map", "count"]
 
-model_type: sparse # sparse or dense
 weights_parent_dir: null
 weights:
   {
     model_subdir: csrnet,
-    blob_file: csrnet.zip,
+    blob_file:
+      { dense: shanghaitech-part-a.zip, sparse: shanghaitech-part-b.zip },
     model_file: { dense: shanghaitech-part-a, sparse: shanghaitech-part-b },
   }
+
+model_type: sparse # sparse or dense
 width: 640
