--- a/peekingduck/configs/model/jde.yml
+++ b/peekingduck/configs/model/jde.yml
@@ -7,7 +7,7 @@ weights_parent_dir: null
 weights:
   {
     model_subdir: jde,
-    blob_file: jde.zip,
+    blob_file: { 864x480: jde_864x480_uncertainty-stripped-half.zip },
     model_file: { 864x480: jde_864x480_uncertainty-stripped-half.pt },
     config_file: { 864x480: yolov3_864x480.cfg },
   }
