--- a/peekingduck/configs/model/mtcnn.yml
+++ b/peekingduck/configs/model/mtcnn.yml
@@ -5,7 +5,7 @@ weights_parent_dir: null
 weights:
   {
     model_subdir: mtcnn,
-    blob_file: mtcnn.zip,
+    blob_file: { default: mtcnn.zip },
     model_file: { default: mtcnn.pb },
   }
 model_nodes:
