--- a/peekingduck/configs/model/csrnet.yml
+++ b/peekingduck/configs/model/csrnet.yml
@@ -4,11 +4,15 @@ output: ["density_map", "count"]
 weights_parent_dir: null
 weights:
   {
-    model_subdir: csrnet,
-    blob_file:
-      { dense: shanghaitech-part-a.zip, sparse: shanghaitech-part-b.zip },
-    model_file: { dense: shanghaitech-part-a, sparse: shanghaitech-part-b },
+    tensorflow:
+      {
+        model_subdir: csrnet,
+        blob_file:
+          { dense: shanghaitech-part-a.zip, sparse: shanghaitech-part-b.zip },
+        model_file: { dense: shanghaitech-part-a, sparse: shanghaitech-part-b },
+      },
   }
 
+model_format: tensorflow
 model_type: sparse # sparse or dense
 width: 640
