update config and codebase for onnx models to work

--- a/peekingduck/configs/model/movenet.yml
+++ b/peekingduck/configs/model/movenet.yml
@@ -15,10 +15,15 @@ weights:
             singlepose_thunder: singlepose_thunder.zip,
           },
         model_file:
+          # {
+          #   multipose_lightning: multipose_lightning,
+          #   singlepose_lightning: singlepose_lightning,
+          #   singlepose_thunder: singlepose_thunder,
+          # },
           {
-            multipose_lightning: multipose_lightning,
-            singlepose_lightning: singlepose_lightning,
-            singlepose_thunder: singlepose_thunder,
+            multipose_lightning: multipose_lightning_fp16,
+            singlepose_lightning: singlepose_lightning_fp16,
+            singlepose_thunder: singlepose_thunder_fp16,
           },
       },
   }
