--- a/peekingduck/configs/model/yolox.yml
+++ b/peekingduck/configs/model/yolox.yml
@@ -42,6 +42,25 @@ weights:
             yolox-l: yolox-l.onnx,
           },
       },
+    tensorrt:
+      {
+        model_subdir: yolox,
+        blob_file:
+          {
+            yolox-tiny: yolox-tiny-trt.zip,
+            yolox-s: yolox-s-trt.zip,
+            yolox-m: yolox-m-trt.zip,
+            yolox-l: yolox-l-trt.zip,
+          },
+        classes_file: coco.names,
+        model_file:
+          {
+            yolox-tiny: yolox-tiny.trt,
+            yolox-s: yolox-s.trt,
+            yolox-m: yolox-m.trt,
+            yolox-l: yolox-l.trt,
+          },
+      },
   }
 model_size:
   {
