--- a/scripts/benchmarks/onnx/run_yolox_small_single.yml
+++ b/scripts/benchmarks/onnx/run_yolox_small_single.yml
@@ -2,5 +2,6 @@ nodes:
 - input.visual:
     source: data/benchmark/single
 - model.yolox:
-    model_type: yolox-m
+    model_format: onnx
+    model_type: yolox-s
 - dabble.fps
