--- a/scripts/benchmarks/tensorrt/run_yolox_medium_single.yml
+++ b/scripts/benchmarks/tensorrt/run_yolox_medium_single.yml
@@ -1,6 +1,7 @@
 nodes:
 - input.visual:
-    source: data/benchmark/multi
+    source: data/benchmark/single
 - model.yolox:
+    model_format: tensorrt
     model_type: yolox-m
 - dabble.fps
