--- a/scripts/benchmarks/tensorrt/run_yolox_small_multi.yml
+++ b/scripts/benchmarks/tensorrt/run_yolox_small_multi.yml
@@ -2,5 +2,6 @@ nodes:
 - input.visual:
     source: data/benchmark/multi
 - model.yolox:
-    model_type: yolox-tiny
+    model_format: tensorrt
+    model_type: yolox-s
 - dabble.fps
