--- a/scripts/benchmarks/tensorrt/run_yolox_tiny_single.yml
+++ b/scripts/benchmarks/tensorrt/run_yolox_tiny_single.yml
@@ -2,5 +2,6 @@ nodes:
 - input.visual:
     source: data/benchmark/single
 - model.yolox:
-    model_type: yolox-s
+    model_format: tensorrt
+    model_type: yolox-tiny
 - dabble.fps
