--- a/peekingduck/configs/model/yolo.yml
+++ b/peekingduck/configs/model/yolo.yml
@@ -20,6 +20,6 @@ model_nodes: { inputs: [x:0], outputs: [Identity:0] }
 
 model_format: tensorflow
 model_type: v4tiny # v4 or v4tiny
-detect_ids: [0]
+detect: [0]
 iou_threshold: 0.5
 score_threshold: 0.2
