- update yolo_face model, config, docs, tests to use 'detect' in place of 'detect_ids' - update declarative_loader to use 'deprecate' for 'detect_ids' deprecation notice - update declarative_loader to perform class names to id conversion if model is not yolo_face

--- a/peekingduck/configs/model/yolo_face.yml
+++ b/peekingduck/configs/model/yolo_face.yml
@@ -18,6 +18,6 @@ max_total_size: 50
 
 model_format: tensorflow
 model_type: v4tiny # v4 or v4tiny
-detect_ids: [0, 1]
+detect: [0, 1]
 iou_threshold: 0.1
 score_threshold: 0.7
