--- a/peekingduck/configs/model/mask_rcnn.yml
+++ b/peekingduck/configs/model/mask_rcnn.yml
@@ -18,7 +18,7 @@ num_classes: 91
 
 model_format: pytorch
 model_type: r50-fpn
-detect_ids: [0]
+detect: [0]
 nms_iou_threshold: 0.5
 max_num_detections: 100
 score_threshold: 0.5
